[metadata]
name = cairopen
version = attr: cairopen.__version__
description = Cairo Libraries for use in StarkNet
author = CairOpen
author_email = maintainers@cairopen.org
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/CairOpen/cairopen-python
platforms = any
classifiers =
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata>=4.0

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
cairopen = "*.py"

[options.extras_require]
testing =
    setuptools
    build
    pytest
